--- a/html/2-12/jcvj.html
+++ b/html/2-12/jcvj.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- WARNING: Spoilers ahead! -->
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css" />
