moved pic for use in more exercises

--- a/html/2-12/jcvj.html
+++ b/html/2-12/jcvj.html
@@ -92,7 +92,7 @@
             <div class='gray-back gray-border inline boxed'>
                 <h2>Filip Van Damme</h2>
                 <a class='img-link' href="http://www.imdb.com/name/nm8315551/?ref_=tt_cl_t11">
-                    <img src="filip.png" />
+                    <img src="../filip.png" />
                 </a>
                 <br>
                 <h3 class='title blue-border'>Filip: Victim and Timecop(?)</h3>
