Header and footer bars; file cleanup

--- a/html/2-13/google_clone.html
+++ b/html/2-13/google_clone.html
@@ -8,8 +8,16 @@
     <title>Google Clone</title>
 </head>
 <body>
+    <div id="header-bar">
+        <div class="head-left">
+            <a class="nice-link little-text" href='#'>About</a><a class="nice-link little-text" href="#">Store</a>
+        </div>
+        <div class="head-right">
+            <a class="nice-link little-text" href='#'>Gmail</a><a class="nice-link little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="nice-link" href='#'><img class="usr-img" src="../filip.png" /></a>
+        </div>
+    </div>
     <div id="center-text">
-        <div class="inline blue">G</div><div class="inline red">o</div><div id="o-button" class="inline yellow">o</div><div class="inline blue">g</div><div class="inline green">l</div><div class="inline red">e</div>
+        <div class="inline blue">G</div><div class="inline red">o</div><div class="inline yellow">o</div><div class="inline blue">g</div><div class="inline green">l</div><div class="inline red">e</div>
     </div>
     <div id="center-bar">
         <div class="fake-mic">
@@ -17,6 +25,14 @@
         </div>
         <div class="little-text">
             Search Google or type URL
+        </div>
+    </div>
+    <div id="footer-bar">
+        <div class="foot-left">
+            <a class="nice-link little-text" href='#'>Advertising</a><a class="nice-link little-text" href='#'>Business</a>
+        </div>
+        <div class="foot-right">
+            <a class="nice-link little-text" href='#'>Privacy</a><a class="nice-link little-text" href='#'>Terms</a><a class="nice-link little-text" href='#'>Settings</a>
         </div>
     </div>
 </body>
