--- a/html/2-14/google_clone_flex.html
+++ b/html/2-14/google_clone_flex.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico">
     <title>Google Clone</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <a class="nice-link little-text" href='#'>About</a><a class="nice-link little-text" href="#">Store</a>
             </div>
             <div class="head-right">
-                <a class="nice-link little-text" href='#'>Gmail</a><a class="nice-link little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="nice-link" href='#'><img class="usr-img" src="../filip.png" /></a>
+                <a class="nice-link-b little-text" href='#'>Gmail</a><a class="nice-link-b little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="usr-img" href='#'></a>
             </div>
         </div>
         <div id="center">
