Tidied file locations

--- a/html/2-13/google_clone.html
+++ b/html/2-13/google_clone.html
@@ -13,7 +13,7 @@
             <a class="nice-link little-text" href='#'>About</a><a class="nice-link little-text" href="#">Store</a>
         </div>
         <div class="head-right">
-            <a class="nice-link little-text" href='#'>Gmail</a><a class="nice-link little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="nice-link" href='#'><img class="usr-img" src="../filip.png" /></a>
+            <a class="nice-link little-text" href='#'>Gmail</a><a class="nice-link little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="nice-link" href='#'><img class="usr-img" src="filip.png" /></a>
         </div>
     </div>
     <div id="center-text">
