More CSS exercises

--- a/html/2-15/responsive_ui.html
+++ b/html/2-15/responsive_ui.html
@@ -14,13 +14,13 @@
             <i class="material-icons search-icon">search</i>
         </div>
         <a class="header-block" href='#'>
-            <i class="material-icons header-icon">account_box</i><div class="header-text">Profile</div>
+                <i class="fas fa-user header-icon"></i><div class="header-text">Profile</div>
         </a>
         <a class="header-block" href='#'>
-            <i class="material-icons header-icon">dashboard</i><div class="header-text">Timeline</div>
+            <i class="fas fa-newspaper header-icon"></i><div class="header-text">Timeline</div>
         </a>
         <a class="header-block" href='#'>
-            <i class="material-icons header-icon">event</i><div class="header-text">Events</div>
+            <i class="fas fa-calendar-alt header-icon"></i><div class="header-text">Events</div>
         </a>
     </div>
     <div class="interface">
