--- a/html/2-16/facebook_clone.html
+++ b/html/2-16/facebook_clone.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="logo.png">
+    <link rel="stylesheet" href="styles.css">
     <title>Facebook Clone</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="page"></div>
 </body>
 </html>
