Day 2 of Javascript; 102 exercises!

--- a/javascript/2-19/index.html
+++ b/javascript/2-19/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Javascript 101</title>
+    <title>Javascript 101/102</title>
 </head>
 <body>
-    
+    <h1>Functions:</h1>
+    <ol>
+        <li>hello(name[optional])</li>
+        <li>madlib(name, subject)</li>
+        <li>tipCalc(bill, qualityOfService)</li>
+        <li>totalBill(bill, qualityOfService)</li>
+        <li>splitAmount(bill, qualityOfService, numberOfPeople)</li>
+        <li>printNumbers()</li>
+        <li>printSquare(size)</li>
+        <li>printBox(size)</li>
+        <li>printBanner(message)</li>
+        <li>factor(number)</li>
+        <li>cipher(message)</li>
+        <li>leetspeak(message)</li>
+        <li>longLongVowels(word)</li>
+        <li>sumNumbers(listOfNumbers)</li>
+        <li>positiveNumbers(listOfNumbers)</li>
+        <li>matrixAdd([[first, matrix], [of, numbers]], [[second, matrix], [of, numbers]])</li>
+        <li>matrixMultiply([[first, matrix], [of, numbers]], [[second, matrix], [of, numbers]])</li>
+        <li>rockPaperScissors(player1Shape, player2Shape)</li>
+        <li>vsRockPaperScissors(numberOfPlayers)</li>
+    </ol>
     <script src="scripts/main.js"></script>
 </body>
 </html>
