Landscapegram navigation arrows

--- a/javascript/2-21/index.html
+++ b/javascript/2-21/index.html
@@ -16,7 +16,11 @@
         
     </div>
     <div id='lightbox' class='inactive'>
-        <img src="https://images.pexels.com/photos/86933/pexels-photo-86933.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" />
+        <div class='container'>
+            <a class='left-arrow'><i class="fas fa-arrow-left"></i></a>
+            <a class='right-arrow'><i class="fas fa-arrow-right"></i></a>
+            <img />
+        </div>
     </div>
 
     <script src='scripts/main.js'></script>
