Javascript 101/102 Exercises complete

--- a/javascript/2-19/index.html
+++ b/javascript/2-19/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Functions:</h1>
-    <ol>
+    <ol id='list'>
         <li>hello(name[optional])</li>
         <li>madlib(name, subject)</li>
         <li>tipCalc(bill, qualityOfService)</li>
@@ -28,6 +28,7 @@
         <li>matrixMultiply([[first, matrix], [of, numbers]], [[second, matrix], [of, numbers]])</li>
         <li>rockPaperScissors(player1Shape, player2Shape)</li>
         <li>vsRockPaperScissors(numberOfPlayers)</li>
+        <li>ticTacToe([[grid,of,'X'],[and,of,'O'],[and,of,null]])</li>
     </ol>
     <script src="scripts/main.js"></script>
 </body>
