--- a/javascript/2-21/index.html
+++ b/javascript/2-21/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/stylesheet.css">
-    <link rel="shortcut icon" href="images/mountainicon_white.png">
+    <link rel="shortcut icon" href="images/mountainicon.png">
     <title>Landscapegram</title>
 </head>
 <body>
     <h1 id='header'>
-        <div class='fancy light-border'>L<img src='images/mountainicon.png' height='40px' width='48px' />ndscapegram</div>
+        <div class='fancy light-border'><a class='little-padding' href='index.html'><img src='images/mountainicon.png' height='20px' width='24px' /></a></div>
+        <div class='fancy light-border big-padding'>L<img src='images/mountainicon.png' />ndscapegram</div>
     </h1>
     <div id='preview'>
         
     </div>
     <div id='lightbox' class='inactive'>
         <div class='container'>
-            <a class='left-arrow'><i class="fas fa-arrow-left"></i></a>
-            <a class='right-arrow'><i class="fas fa-arrow-right"></i></a>
-            <img />
+            <div class="comments"></div>
+            <div class='content'>
+                <a class='left-arrow' href='#'><i class="fas fa-arrow-left"></i></a>
+                <a class='right-arrow' href='#'><i class="fas fa-arrow-right"></i></a>
+                <a class='comment-button'><i class="far fa-comments"></i></a>
+                <img />
+            </div>
         </div>
     </div>
 
