Week 4 complete; Algorithm Friyay

--- a/javascript/2-21/index.html
+++ b/javascript/2-21/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 id='header'>
-        <div class='fancy light-border'><a class='little-padding' href='index.html'><img src='images/mountainicon.png' height='20px' width='24px' /></a></div>
+        <div class='fancy light-border'><a class='little-padding' href='index.html'><img src='images/mountainicon.png' /></a></div>
         <div class='fancy light-border big-padding'>L<img src='images/mountainicon.png' />ndscapegram</div>
     </h1>
     <div id='preview'>
@@ -18,12 +18,13 @@
     </div>
     <div id='lightbox' class='inactive'>
         <div class='container'>
-            <div class="comments"></div>
             <div class='content'>
                 <a class='left-arrow' href='#'><i class="fas fa-arrow-left"></i></a>
                 <a class='right-arrow' href='#'><i class="fas fa-arrow-right"></i></a>
-                <a class='comment-button'><i class="far fa-comments"></i></a>
+                <a class='comment-button' href='#'><i class="far fa-comments"></i></a>
                 <img />
+            <div class="comments"></div>
+            <a href='#'><i class="far fa-window-close close-button"></i></a>
             </div>
         </div>
     </div>
