--- a/javascript/2-21/index.html
+++ b/javascript/2-21/index.html
@@ -29,6 +29,7 @@
         </div>
     </div>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
     <script src='scripts/main.js'></script>
 </body>
 </html>
