--- a/html/2-14/google_clone_flex.html
+++ b/html/2-14/google_clone_flex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="https://www.google.com/images/branding/product/ico/googleg_lodp.ico">
+    <link rel="shortcut icon" href="little_icon.png">
     <title>Google Clone</title>
 </head>
 <body>
