--- a/coffeerun/index.html
+++ b/coffeerun/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>coffeerun</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
   </head>
   <body class="container">
     <header>
@@ -15,11 +16,11 @@
           <form data-coffee-order="form">
             <div class="form-group">
               <label for="coffeeOrder">Coffee Order</label>
-              <input class="form-control" name="coffee" id="coffeeOrder" autofocus>
+              <input class="form-control" name="coffee" id="coffeeOrder" autofocus required>
             </div>
             <div class="form-group">
               <label for="emailInput">Email</label>
-              <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
+              <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com" required>
             </div>
             <div class="radio">
               <label>
@@ -55,6 +56,18 @@
             <button type="submit" class="btn btn-default">Submit</button>
             <button type="reset" class="btn btn-default">Reset</button>
           </form>
+        </div>
+      </div>
+    </section>
+    <header>
+      <h1>Pending Orders</h1>
+    </header>
+    <section>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <ol id='order-list' class="list-group" style="margin-left:10px">
+
+          </ul>
         </div>
       </div>
     </section>
