--- a/coffeerun/index.html
+++ b/coffeerun/index.html
@@ -55,6 +55,7 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
             <button type="reset" class="btn btn-default">Reset</button>
+            <button id="pop" class="btn btn-default">Populate</button>
           </form>
         </div>
       </div>
