June Cohort DIR Edits

--- a/html/2-14/google_clone_flex.html
+++ b/html/2-14/google_clone_flex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,24 @@
     <link rel="shortcut icon" href="little_icon.png">
     <title>Google Clone</title>
 </head>
+
 <body>
     <div class="page-layout">
         <div id="header-bar">
             <div class="head-left">
-                <a class="nice-link little-text" href='#'>About</a><a class="nice-link little-text" href="#">Store</a>
+                <a class="nice-link little-text" href='#'>About</a>
+                <a class="nice-link little-text" href="#">Store</a>
             </div>
             <div class="head-right">
-                <a class="nice-link-b little-text" href='#'>Gmail</a><a class="nice-link-b little-text" href='#'>Images</a><a class="nice-link" href='#'><i class="material-icons">apps</i></a><a class="nice-link" href='#'><i class="material-icons">notifications</i></a><a class="usr-img" href='#'></a>
+                <a class="nice-link-b little-text" href='#'>Gmail</a>
+                <a class="nice-link-b little-text" href='#'>Images</a>
+                <a class="nice-link" href='#'>
+                    <i class="material-icons">apps</i>
+                </a>
+                <a class="nice-link" href='#'>
+                    <i class="material-icons">notifications</i>
+                </a>
+                <a class="usr-img" href='#'></a>
             </div>
         </div>
         <div id="center">
@@ -26,7 +37,7 @@
                 <div id="center-bar">
                     <input id="search-bar" type="text" name="q">
                     <div class="fake-mic">
-                        <img src="mic.png"/>
+                        <img src="mic.png" />
                     </div>
                 </div>
                 <div id="search-buttons">
@@ -34,15 +45,20 @@
                     <input class="srch-btn" value="I'm Feeling Lucky" type="submit">
                 </div>
             </form>
+            <div class="spacer"></div>
         </div>
         <div id="footer-bar">
             <div class="foot-left">
-                <a class="nice-link little-text" href='#'>Advertising</a><a class="nice-link little-text" href='#'>Business</a>
+                <a class="nice-link little-text" href='#'>Advertising</a>
+                <a class="nice-link little-text" href='#'>Business</a>
             </div>
             <div class="foot-right">
-                <a class="nice-link little-text" href='#'>Privacy</a><a class="nice-link little-text" href='#'>Terms</a><a class="nice-link little-text" href='#'>Settings</a>
+                <a class="nice-link little-text" href='#'>Privacy</a>
+                <a class="nice-link little-text" href='#'>Terms</a>
+                <a class="nice-link little-text" href='#'>Settings</a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
