DIR Update: fix gram clone index assignment on thumbnail click

--- a/javascript/2-21/index.html
+++ b/javascript/2-21/index.html
@@ -16,7 +16,7 @@
     <div id='preview'>
         
     </div>
-    <div id='lightbox' class='inactive'>
+    <div class='lightbox inactive'>
         <div class='container'>
             <div class='content'>
                 <a class='left-arrow' href='#'><i class="fas fa-arrow-left"></i></a>
